    name: description``.
  - Added ``tab-width`` option to ``literalinclude`` directive.
  - Added ``titlesonly`` option to ``toctree`` directive.
  - Added the ``prepend`` and ``append`` options to the
    ``literalinclude`` directive.
  - #284: All docinfo metadata is now put into the document metadata, not
    just the author.

* Configuration:

  - Added ``rst_prolog`` config value.
  - Added ``html_secnumber_suffix`` config value to control section
    numbering format.
  - Added ``html_compact_lists`` config value to control docutils'
    compact lists feature.
  - The ``html_sidebars`` config value can now contain patterns as
    keys, and the values can be lists that explicitly select which
    sidebar templates should be rendered.  That means that the builtin
    sidebar contents can be included only selectively.
  - ``html_static_path`` can now contain single file entries.
  - The new universal config value ``exclude_patterns`` makes the
    old ``unused_docs``, ``exclude_trees`` and ``exclude_dirnames``
    obsolete.
  - Added ``html_output_encoding`` config value.
  - Added the ``latex_docclass`` config value and made the "twoside"
    documentclass option overridable by "oneside".
  - Added the ``trim_doctest_flags`` config value, which is true by
    default.
  - Added ``html_show_copyright`` config value.
  - Added ``latex_show_pagerefs`` and ``latex_show_urls`` config values.

* New builders:

  - Added a builder for the Epub format.
  - Added a builder for manual pages.
  - Added a single-file HTML builder.

* HTML output:

  - Inline roles now get a CSS class with their name, allowing styles to
    customize their appearance.  Domain-specific roles get two classes,
    ``domain`` and ``domain-rolename``.
  - References now get the class ``internal`` if they are internal to
    the whole project, as opposed to internal to the current page.
  - External references can be styled differently with the new